# peNES

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
example/: compile.sh  main.asm
src/: apu.cpp  apu.hh  cmdline.hh  constants.hh  cpu.cpp  cpu.hh  cpu_table.hh  cpuhooks.cpp  ines.cpp  ines.hh  main.cpp  mmu.cpp  mmu.hh  palette.hh  ppu.cpp  ppu.hh  rgbpalette.hh
src/mappers/: CMakeLists.txt  base.cpp  cnrom.cpp  dumper.hh  mapper.hh  mmc0.cpp  mmc1.cpp  mmc3.cpp
src/plat/: plat.hh  plinux.cpp  pwin.cpp
